y.output
Terminals unused in grammar

    RESERVED
    ARROW


Grammar

    0 $accept: Program $end

    1 Program: CLASS IDENTIFIER LBRACE ProgramMembers RBRACE

    2 ProgramMembers: ProgramMembers ProgramMember
    3               | ε

    4 ProgramMember: MethodDecl
    5              | FieldDecl
    6              | SEMICOLON

    7 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

    8 FieldDecl: PUBLIC STATIC Type IDENTIFIER FieldDeclTail SEMICOLON
    9          | error SEMICOLON

   10 FieldDeclTail: FieldDeclTail COMMA IDENTIFIER
   11              | ε

   12 Type: BOOL
   13     | INT
   14     | DOUBLE

   15 ParamType: Type
   16          | STRING LSQ RSQ

   17 MethodHeader: Type IDENTIFIER LPAR FormalParamsOpt RPAR
   18             | VOID IDENTIFIER LPAR FormalParamsOpt RPAR

   19 FormalParamsOpt: FormalParams
   20                | ε

   21 FormalParams: ParamType IDENTIFIER FormalParamsTail

   22 FormalParamsTail: FormalParamsTail COMMA ParamType IDENTIFIER
   23                 | ε

   24 MethodBody: LBRACE MethodBodyItems RBRACE

   25 MethodBodyItems: MethodBodyItems MethodBodyItem
   26                | ε

   27 MethodBodyItem: VarDecl
   28               | Statement

   29 VarDecl: Type IDENTIFIER VarDeclTail SEMICOLON

   30 VarDeclTail: VarDeclTail COMMA IDENTIFIER
   31            | ε

   32 Statement: MatchedStatement
   33          | UnmatchedStatement

   34 MatchedStatement: LBRACE StatementList RBRACE
   35                 | IF LPAR ExprOrAssign RPAR MatchedStatement ELSE MatchedStatement
   36                 | WHILE LPAR ExprOrAssign RPAR MatchedStatement
   37                 | RETURN ExprOpt SEMICOLON
   38                 | MethodInvocation SEMICOLON
   39                 | Assignment SEMICOLON
   40                 | ParseArgs SEMICOLON
   41                 | SEMICOLON
   42                 | PRINT LPAR PrintArg RPAR SEMICOLON
   43                 | error SEMICOLON

   44 UnmatchedStatement: IF LPAR ExprOrAssign RPAR Statement
   45                   | IF LPAR ExprOrAssign RPAR MatchedStatement ELSE UnmatchedStatement
   46                   | WHILE LPAR ExprOrAssign RPAR UnmatchedStatement

   47 StatementList: StatementList Statement
   48              | ε

   49 ExprOpt: ExprOrAssign
   50        | ε

   51 PrintArg: ExprOrAssign
   52         | STRLIT

   53 MethodInvocation: IDENTIFIER LPAR ExprListOpt RPAR
   54                 | IDENTIFIER LPAR error RPAR

   55 ExprListOpt: ExprList
   56            | ε

   57 ExprList: ExprOrAssign
   58         | ExprList COMMA Expr

   59 ExprOrAssign: Expr
   60             | Assignment

   61 Assignment: IDENTIFIER ASSIGN ExprOrAssign

   62 ParseArgs: PARSEINT LPAR IDENTIFIER LSQ ExprOrAssign RSQ RPAR
   63          | PARSEINT LPAR error RPAR

   64 Expr: Expr PLUS Expr
   65     | Expr MINUS Expr
   66     | Expr STAR Expr
   67     | Expr DIV Expr
   68     | Expr MOD Expr
   69     | Expr AND Expr
   70     | Expr OR Expr
   71     | Expr XOR Expr
   72     | Expr LSHIFT Expr
   73     | Expr RSHIFT Expr
   74     | Expr EQ Expr
   75     | Expr GE Expr
   76     | Expr GT Expr
   77     | Expr LE Expr
   78     | Expr LT Expr
   79     | Expr NE Expr
   80     | MINUS Expr
   81     | PLUS Expr
   82     | NOT Expr
   83     | LPAR ExprOrAssign RPAR
   84     | LPAR error RPAR
   85     | MethodInvocation
   86     | ParseArgs
   87     | IDENTIFIER DOTLENGTH
   88     | IDENTIFIER
   89     | NATURAL
   90     | DECIMAL
   91     | BOOLLIT


Terminals, with rules where they appear

    $end (0) 0
    error (256) 9 43 54 63 84
    IDENTIFIER <lexeme> (258) 1 8 10 17 18 21 22 29 30 53 54 61 62 87 88
    NATURAL <lexeme> (259) 89
    DECIMAL <lexeme> (260) 90
    BOOLLIT <lexeme> (261) 91
    STRLIT <lexeme> (262) 52
    RESERVED <lexeme> (263)
    BOOL (264) 12
    INT (265) 13
    DOUBLE (266) 14
    STRING (267) 16
    VOID (268) 18
    CLASS (269) 1
    PUBLIC (270) 7 8
    STATIC (271) 7 8
    RETURN (272) 37
    IF (273) 35 44 45
    ELSE (274) 35 45
    WHILE (275) 36 46
    PRINT (276) 42
    PARSEINT (277) 62 63
    DOTLENGTH (278) 87
    ASSIGN (279) 61
    STAR (280) 66
    COMMA (281) 10 22 30 58
    DIV (282) 67
    EQ (283) 74
    GE (284) 75
    GT (285) 76
    LBRACE (286) 1 24 34
    LE (287) 77
    LPAR (288) 17 18 35 36 42 44 45 46 53 54 62 63 83 84
    LSQ (289) 16 62
    LT (290) 78
    MINUS (291) 65 80
    MOD (292) 68
    NE (293) 79
    NOT (294) 82
    OR (295) 70
    PLUS (296) 64 81
    RBRACE (297) 1 24 34
    RPAR (298) 17 18 35 36 42 44 45 46 53 54 62 63 83 84
    RSQ (299) 16 62
    SEMICOLON (300) 6 8 9 29 37 38 39 40 41 42 43
    ARROW (301)
    LSHIFT (302) 72
    RSHIFT (303) 73
    XOR (304) 71
    AND (305) 69
    UPLUS (306)
    UMINUS (307)


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    Program <node> (54)
        on left: 1
        on right: 0
    ProgramMembers <node> (55)
        on left: 2 3
        on right: 1 2
    ProgramMember <node> (56)
        on left: 4 5 6
        on right: 2
    MethodDecl <node> (57)
        on left: 7
        on right: 4
    FieldDecl <node> (58)
        on left: 8 9
        on right: 5
    FieldDeclTail <node> (59)
        on left: 10 11
        on right: 8 10
    Type <node> (60)
        on left: 12 13 14
        on right: 8 15 17 29
    ParamType <node> (61)
        on left: 15 16
        on right: 21 22
    MethodHeader <node> (62)
        on left: 17 18
        on right: 7
    FormalParamsOpt <node> (63)
        on left: 19 20
        on right: 17 18
    FormalParams <node> (64)
        on left: 21
        on right: 19
    FormalParamsTail <node> (65)
        on left: 22 23
        on right: 21 22
    MethodBody <node> (66)
        on left: 24
        on right: 7
    MethodBodyItems <node> (67)
        on left: 25 26
        on right: 24 25
    MethodBodyItem <node> (68)
        on left: 27 28
        on right: 25
    VarDecl <node> (69)
        on left: 29
        on right: 27
    VarDeclTail <node> (70)
        on left: 30 31
        on right: 29 30
    Statement <node> (71)
        on left: 32 33
        on right: 28 44 47
    MatchedStatement <node> (72)
        on left: 34 35 36 37 38 39 40 41 42 43
        on right: 32 35 36 45
    UnmatchedStatement <node> (73)
        on left: 44 45 46
        on right: 33 45 46
    StatementList <node> (74)
        on left: 47 48
        on right: 34 47
    ExprOpt <node> (75)
        on left: 49 50
        on right: 37
    PrintArg <node> (76)
        on left: 51 52
        on right: 42
    MethodInvocation <node> (77)
        on left: 53 54
        on right: 38 85
    ExprListOpt <node> (78)
        on left: 55 56
        on right: 53
    ExprList <node> (79)
        on left: 57 58
        on right: 55 58
    ExprOrAssign <node> (80)
        on left: 59 60
        on right: 35 36 44 45 46 49 51 57 61 62 83
    Assignment <node> (81)
        on left: 61
        on right: 39 60
    ParseArgs <node> (82)
        on left: 62 63
        on right: 40 86
    Expr <node> (83)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91
        on right: 58 59 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82


State 0

    0 $accept: • Program $end

    CLASS  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: CLASS • IDENTIFIER LBRACE ProgramMembers RBRACE

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: Program • $end

    $end  shift, and go to state 4


State 3

    1 Program: CLASS IDENTIFIER • LBRACE ProgramMembers RBRACE

    LBRACE  shift, and go to state 5


State 4

    0 $accept: Program $end •

    $default  accept


State 5

    1 Program: CLASS IDENTIFIER LBRACE • ProgramMembers RBRACE

    $default  reduce using rule 3 (ProgramMembers)

    ProgramMembers  go to state 6


State 6

    1 Program: CLASS IDENTIFIER LBRACE ProgramMembers • RBRACE
    2 ProgramMembers: ProgramMembers • ProgramMember

    error      shift, and go to state 7
    PUBLIC     shift, and go to state 8
    RBRACE     shift, and go to state 9
    SEMICOLON  shift, and go to state 10

    ProgramMember  go to state 11
    MethodDecl     go to state 12
    FieldDecl      go to state 13


State 7

    9 FieldDecl: error • SEMICOLON

    SEMICOLON  shift, and go to state 14


State 8

    7 MethodDecl: PUBLIC • STATIC MethodHeader MethodBody
    8 FieldDecl: PUBLIC • STATIC Type IDENTIFIER FieldDeclTail SEMICOLON

    STATIC  shift, and go to state 15


State 9

    1 Program: CLASS IDENTIFIER LBRACE ProgramMembers RBRACE •

    $default  reduce using rule 1 (Program)


State 10

    6 ProgramMember: SEMICOLON •

    $default  reduce using rule 6 (ProgramMember)


State 11

    2 ProgramMembers: ProgramMembers ProgramMember •

    $default  reduce using rule 2 (ProgramMembers)


State 12

    4 ProgramMember: MethodDecl •

    $default  reduce using rule 4 (ProgramMember)


State 13

    5 ProgramMember: FieldDecl •

    $default  reduce using rule 5 (ProgramMember)


State 14

    9 FieldDecl: error SEMICOLON •

    $default  reduce using rule 9 (FieldDecl)


State 15

    7 MethodDecl: PUBLIC STATIC • MethodHeader MethodBody
    8 FieldDecl: PUBLIC STATIC • Type IDENTIFIER FieldDeclTail SEMICOLON

    BOOL    shift, and go to state 16
    INT     shift, and go to state 17
    DOUBLE  shift, and go to state 18
    VOID    shift, and go to state 19

    Type          go to state 20
    MethodHeader  go to state 21


State 16

   12 Type: BOOL •

    $default  reduce using rule 12 (Type)


State 17

   13 Type: INT •

    $default  reduce using rule 13 (Type)


State 18

   14 Type: DOUBLE •

    $default  reduce using rule 14 (Type)


State 19

   18 MethodHeader: VOID • IDENTIFIER LPAR FormalParamsOpt RPAR

    IDENTIFIER  shift, and go to state 22


State 20

    8 FieldDecl: PUBLIC STATIC Type • IDENTIFIER FieldDeclTail SEMICOLON
   17 MethodHeader: Type • IDENTIFIER LPAR FormalParamsOpt RPAR

    IDENTIFIER  shift, and go to state 23


State 21

    7 MethodDecl: PUBLIC STATIC MethodHeader • MethodBody

    LBRACE  shift, and go to state 24

    MethodBody  go to state 25


State 22

   18 MethodHeader: VOID IDENTIFIER • LPAR FormalParamsOpt RPAR

    LPAR  shift, and go to state 26


State 23

    8 FieldDecl: PUBLIC STATIC Type IDENTIFIER • FieldDeclTail SEMICOLON
   17 MethodHeader: Type IDENTIFIER • LPAR FormalParamsOpt RPAR

    LPAR  shift, and go to state 27

    $default  reduce using rule 11 (FieldDeclTail)

    FieldDeclTail  go to state 28


State 24

   24 MethodBody: LBRACE • MethodBodyItems RBRACE

    $default  reduce using rule 26 (MethodBodyItems)

    MethodBodyItems  go to state 29


State 25

    7 MethodDecl: PUBLIC STATIC MethodHeader MethodBody •

    $default  reduce using rule 7 (MethodDecl)


State 26

   18 MethodHeader: VOID IDENTIFIER LPAR • FormalParamsOpt RPAR

    BOOL    shift, and go to state 16
    INT     shift, and go to state 17
    DOUBLE  shift, and go to state 18
    STRING  shift, and go to state 30

    $default  reduce using rule 20 (FormalParamsOpt)

    Type             go to state 31
    ParamType        go to state 32
    FormalParamsOpt  go to state 33
    FormalParams     go to state 34


State 27

   17 MethodHeader: Type IDENTIFIER LPAR • FormalParamsOpt RPAR

    BOOL    shift, and go to state 16
    INT     shift, and go to state 17
    DOUBLE  shift, and go to state 18
    STRING  shift, and go to state 30

    $default  reduce using rule 20 (FormalParamsOpt)

    Type             go to state 31
    ParamType        go to state 32
    FormalParamsOpt  go to state 35
    FormalParams     go to state 34


State 28

    8 FieldDecl: PUBLIC STATIC Type IDENTIFIER FieldDeclTail • SEMICOLON
   10 FieldDeclTail: FieldDeclTail • COMMA IDENTIFIER

    COMMA      shift, and go to state 36
    SEMICOLON  shift, and go to state 37


State 29

   24 MethodBody: LBRACE MethodBodyItems • RBRACE
   25 MethodBodyItems: MethodBodyItems • MethodBodyItem

    error       shift, and go to state 38
    IDENTIFIER  shift, and go to state 39
    BOOL        shift, and go to state 16
    INT         shift, and go to state 17
    DOUBLE      shift, and go to state 18
    RETURN      shift, and go to state 40
    IF          shift, and go to state 41
    WHILE       shift, and go to state 42
    PRINT       shift, and go to state 43
    PARSEINT    shift, and go to state 44
    LBRACE      shift, and go to state 45
    RBRACE      shift, and go to state 46
    SEMICOLON   shift, and go to state 47

    Type                go to state 48
    MethodBodyItem      go to state 49
    VarDecl             go to state 50
    Statement           go to state 51
    MatchedStatement    go to state 52
    UnmatchedStatement  go to state 53
    MethodInvocation    go to state 54
    Assignment          go to state 55
    ParseArgs           go to state 56


State 30

   16 ParamType: STRING • LSQ RSQ

    LSQ  shift, and go to state 57


State 31

   15 ParamType: Type •

    $default  reduce using rule 15 (ParamType)


State 32

   21 FormalParams: ParamType • IDENTIFIER FormalParamsTail

    IDENTIFIER  shift, and go to state 58


State 33

   18 MethodHeader: VOID IDENTIFIER LPAR FormalParamsOpt • RPAR

    RPAR  shift, and go to state 59


State 34

   19 FormalParamsOpt: FormalParams •

    $default  reduce using rule 19 (FormalParamsOpt)


State 35

   17 MethodHeader: Type IDENTIFIER LPAR FormalParamsOpt • RPAR

    RPAR  shift, and go to state 60


State 36

   10 FieldDeclTail: FieldDeclTail COMMA • IDENTIFIER

    IDENTIFIER  shift, and go to state 61


State 37

    8 FieldDecl: PUBLIC STATIC Type IDENTIFIER FieldDeclTail SEMICOLON •

    $default  reduce using rule 8 (FieldDecl)


State 38

   43 MatchedStatement: error • SEMICOLON

    SEMICOLON  shift, and go to state 62


State 39

   53 MethodInvocation: IDENTIFIER • LPAR ExprListOpt RPAR
   54                 | IDENTIFIER • LPAR error RPAR
   61 Assignment: IDENTIFIER • ASSIGN ExprOrAssign

    ASSIGN  shift, and go to state 63
    LPAR    shift, and go to state 64


State 40

   37 MatchedStatement: RETURN • ExprOpt SEMICOLON

    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68
    PARSEINT    shift, and go to state 44
    LPAR        shift, and go to state 69
    MINUS       shift, and go to state 70
    NOT         shift, and go to state 71
    PLUS        shift, and go to state 72

    $default  reduce using rule 50 (ExprOpt)

    ExprOpt           go to state 73
    MethodInvocation  go to state 74
    ExprOrAssign      go to state 75
    Assignment        go to state 76
    ParseArgs         go to state 77
    Expr              go to state 78


State 41

   35 MatchedStatement: IF • LPAR ExprOrAssign RPAR MatchedStatement ELSE MatchedStatement
   44 UnmatchedStatement: IF • LPAR ExprOrAssign RPAR Statement
   45                   | IF • LPAR ExprOrAssign RPAR MatchedStatement ELSE UnmatchedStatement

    LPAR  shift, and go to state 79


State 42

   36 MatchedStatement: WHILE • LPAR ExprOrAssign RPAR MatchedStatement
   46 UnmatchedStatement: WHILE • LPAR ExprOrAssign RPAR UnmatchedStatement

    LPAR  shift, and go to state 80


State 43

   42 MatchedStatement: PRINT • LPAR PrintArg RPAR SEMICOLON

    LPAR  shift, and go to state 81


State 44

   62 ParseArgs: PARSEINT • LPAR IDENTIFIER LSQ ExprOrAssign RSQ RPAR
   63          | PARSEINT • LPAR error RPAR

    LPAR  shift, and go to state 82


State 45

   34 MatchedStatement: LBRACE • StatementList RBRACE

    $default  reduce using rule 48 (StatementList)

    StatementList  go to state 83


State 46

   24 MethodBody: LBRACE MethodBodyItems RBRACE •

    $default  reduce using rule 24 (MethodBody)


State 47

   41 MatchedStatement: SEMICOLON •

    $default  reduce using rule 41 (MatchedStatement)


State 48

   29 VarDecl: Type • IDENTIFIER VarDeclTail SEMICOLON

    IDENTIFIER  shift, and go to state 84


State 49

   25 MethodBodyItems: MethodBodyItems MethodBodyItem •

    $default  reduce using rule 25 (MethodBodyItems)


State 50

   27 MethodBodyItem: VarDecl •

    $default  reduce using rule 27 (MethodBodyItem)


State 51

   28 MethodBodyItem: Statement •

    $default  reduce using rule 28 (MethodBodyItem)


State 52

   32 Statement: MatchedStatement •

    $default  reduce using rule 32 (Statement)


State 53

   33 Statement: UnmatchedStatement •

    $default  reduce using rule 33 (Statement)


State 54

   38 MatchedStatement: MethodInvocation • SEMICOLON

    SEMICOLON  shift, and go to state 85


State 55

   39 MatchedStatement: Assignment • SEMICOLON

    SEMICOLON  shift, and go to state 86


State 56

   40 MatchedStatement: ParseArgs • SEMICOLON

    SEMICOLON  shift, and go to state 87


State 57

   16 ParamType: STRING LSQ • RSQ

    RSQ  shift, and go to state 88


State 58

   21 FormalParams: ParamType IDENTIFIER • FormalParamsTail

    $default  reduce using rule 23 (FormalParamsTail)

    FormalParamsTail  go to state 89


State 59

   18 MethodHeader: VOID IDENTIFIER LPAR FormalParamsOpt RPAR •

    $default  reduce using rule 18 (MethodHeader)


State 60

   17 MethodHeader: Type IDENTIFIER LPAR FormalParamsOpt RPAR •

    $default  reduce using rule 17 (MethodHeader)


State 61

   10 FieldDeclTail: FieldDeclTail COMMA IDENTIFIER •

    $default  reduce using rule 10 (FieldDeclTail)


State 62

   43 MatchedStatement: error SEMICOLON •

    $default  reduce using rule 43 (MatchedStatement)


State 63

   61 Assignment: IDENTIFIER ASSIGN • ExprOrAssign

    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68
    PARSEINT    shift, and go to state 44
    LPAR        shift, and go to state 69
    MINUS       shift, and go to state 70
    NOT         shift, and go to state 71
    PLUS        shift, and go to state 72

    MethodInvocation  go to state 74
    ExprOrAssign      go to state 90
    Assignment        go to state 76
    ParseArgs         go to state 77
    Expr              go to state 78


State 64

   53 MethodInvocation: IDENTIFIER LPAR • ExprListOpt RPAR
   54                 | IDENTIFIER LPAR • error RPAR

    error       shift, and go to state 91
    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68
    PARSEINT    shift, and go to state 44
    LPAR        shift, and go to state 69
    MINUS       shift, and go to state 70
    NOT         shift, and go to state 71
    PLUS        shift, and go to state 72

    RPAR  reduce using rule 56 (ExprListOpt)

    MethodInvocation  go to state 74
    ExprListOpt       go to state 92
    ExprList          go to state 93
    ExprOrAssign      go to state 94
    Assignment        go to state 76
    ParseArgs         go to state 77
    Expr              go to state 78


State 65

   53 MethodInvocation: IDENTIFIER • LPAR ExprListOpt RPAR
   54                 | IDENTIFIER • LPAR error RPAR
   61 Assignment: IDENTIFIER • ASSIGN ExprOrAssign
   87 Expr: IDENTIFIER • DOTLENGTH
   88     | IDENTIFIER •

    DOTLENGTH  shift, and go to state 95
    ASSIGN     shift, and go to state 63
    LPAR       shift, and go to state 64

    $default  reduce using rule 88 (Expr)


State 66

   89 Expr: NATURAL •

    $default  reduce using rule 89 (Expr)


State 67

   90 Expr: DECIMAL •

    $default  reduce using rule 90 (Expr)


State 68

   91 Expr: BOOLLIT •

    $default  reduce using rule 91 (Expr)


State 69

   83 Expr: LPAR • ExprOrAssign RPAR
   84     | LPAR • error RPAR

    error       shift, and go to state 96
    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68
    PARSEINT    shift, and go to state 44
    LPAR        shift, and go to state 69
    MINUS       shift, and go to state 70
    NOT         shift, and go to state 71
    PLUS        shift, and go to state 72

    MethodInvocation  go to state 74
    ExprOrAssign      go to state 97
    Assignment        go to state 76
    ParseArgs         go to state 77
    Expr              go to state 78


State 70

   80 Expr: MINUS • Expr

    IDENTIFIER  shift, and go to state 98
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68
    PARSEINT    shift, and go to state 44
    LPAR        shift, and go to state 69
    MINUS       shift, and go to state 70
    NOT         shift, and go to state 71
    PLUS        shift, and go to state 72

    MethodInvocation  go to state 74
    ParseArgs         go to state 77
    Expr              go to state 99


State 71

   82 Expr: NOT • Expr

    IDENTIFIER  shift, and go to state 98
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68
    PARSEINT    shift, and go to state 44
    LPAR        shift, and go to state 69
    MINUS       shift, and go to state 70
    NOT         shift, and go to state 71
    PLUS        shift, and go to state 72

    MethodInvocation  go to state 74
    ParseArgs         go to state 77
    Expr              go to state 100


State 72

   81 Expr: PLUS • Expr

    IDENTIFIER  shift, and go to state 98
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68
    PARSEINT    shift, and go to state 44
    LPAR        shift, and go to state 69
    MINUS       shift, and go to state 70
    NOT         shift, and go to state 71
    PLUS        shift, and go to state 72

    MethodInvocation  go to state 74
    ParseArgs         go to state 77
    Expr              go to state 101


State 73

   37 MatchedStatement: RETURN ExprOpt • SEMICOLON

    SEMICOLON  shift, and go to state 102


State 74

   85 Expr: MethodInvocation •

    $default  reduce using rule 85 (Expr)


State 75

   49 ExprOpt: ExprOrAssign •

    $default  reduce using rule 49 (ExprOpt)


State 76

   60 ExprOrAssign: Assignment •

    $default  reduce using rule 60 (ExprOrAssign)


State 77

   86 Expr: ParseArgs •

    $default  reduce using rule 86 (Expr)


State 78

   59 ExprOrAssign: Expr •
   64 Expr: Expr • PLUS Expr
   65     | Expr • MINUS Expr
   66     | Expr • STAR Expr
   67     | Expr • DIV Expr
   68     | Expr • MOD Expr
   69     | Expr • AND Expr
   70     | Expr • OR Expr
   71     | Expr • XOR Expr
   72     | Expr • LSHIFT Expr
   73     | Expr • RSHIFT Expr
   74     | Expr • EQ Expr
   75     | Expr • GE Expr
   76     | Expr • GT Expr
   77     | Expr • LE Expr
   78     | Expr • LT Expr
   79     | Expr • NE Expr

    STAR    shift, and go to state 103
    DIV     shift, and go to state 104
    EQ      shift, and go to state 105
    GE      shift, and go to state 106
    GT      shift, and go to state 107
    LE      shift, and go to state 108
    LT      shift, and go to state 109
    MINUS   shift, and go to state 110
    MOD     shift, and go to state 111
    NE      shift, and go to state 112
    OR      shift, and go to state 113
    PLUS    shift, and go to state 114
    LSHIFT  shift, and go to state 115
    RSHIFT  shift, and go to state 116
    XOR     shift, and go to state 117
    AND     shift, and go to state 118

    $default  reduce using rule 59 (ExprOrAssign)


State 79

   35 MatchedStatement: IF LPAR • ExprOrAssign RPAR MatchedStatement ELSE MatchedStatement
   44 UnmatchedStatement: IF LPAR • ExprOrAssign RPAR Statement
   45                   | IF LPAR • ExprOrAssign RPAR MatchedStatement ELSE UnmatchedStatement

    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68
    PARSEINT    shift, and go to state 44
    LPAR        shift, and go to state 69
    MINUS       shift, and go to state 70
    NOT         shift, and go to state 71
    PLUS        shift, and go to state 72

    MethodInvocation  go to state 74
    ExprOrAssign      go to state 119
    Assignment        go to state 76
    ParseArgs         go to state 77
    Expr              go to state 78


State 80

   36 MatchedStatement: WHILE LPAR • ExprOrAssign RPAR MatchedStatement
   46 UnmatchedStatement: WHILE LPAR • ExprOrAssign RPAR UnmatchedStatement

    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68
    PARSEINT    shift, and go to state 44
    LPAR        shift, and go to state 69
    MINUS       shift, and go to state 70
    NOT         shift, and go to state 71
    PLUS        shift, and go to state 72

    MethodInvocation  go to state 74
    ExprOrAssign      go to state 120
    Assignment        go to state 76
    ParseArgs         go to state 77
    Expr              go to state 78


State 81

   42 MatchedStatement: PRINT LPAR • PrintArg RPAR SEMICOLON

    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68
    STRLIT      shift, and go to state 121
    PARSEINT    shift, and go to state 44
    LPAR        shift, and go to state 69
    MINUS       shift, and go to state 70
    NOT         shift, and go to state 71
    PLUS        shift, and go to state 72

    PrintArg          go to state 122
    MethodInvocation  go to state 74
    ExprOrAssign      go to state 123
    Assignment        go to state 76
    ParseArgs         go to state 77
    Expr              go to state 78


State 82

   62 ParseArgs: PARSEINT LPAR • IDENTIFIER LSQ ExprOrAssign RSQ RPAR
   63          | PARSEINT LPAR • error RPAR

    error       shift, and go to state 124
    IDENTIFIER  shift, and go to state 125


State 83

   34 MatchedStatement: LBRACE StatementList • RBRACE
   47 StatementList: StatementList • Statement

    error       shift, and go to state 38
    IDENTIFIER  shift, and go to state 39
    RETURN      shift, and go to state 40
    IF          shift, and go to state 41
    WHILE       shift, and go to state 42
    PRINT       shift, and go to state 43
    PARSEINT    shift, and go to state 44
    LBRACE      shift, and go to state 45
    RBRACE      shift, and go to state 126
    SEMICOLON   shift, and go to state 47

    Statement           go to state 127
    MatchedStatement    go to state 52
    UnmatchedStatement  go to state 53
    MethodInvocation    go to state 54
    Assignment          go to state 55
    ParseArgs           go to state 56


State 84

   29 VarDecl: Type IDENTIFIER • VarDeclTail SEMICOLON

    $default  reduce using rule 31 (VarDeclTail)

    VarDeclTail  go to state 128


State 85

   38 MatchedStatement: MethodInvocation SEMICOLON •

    $default  reduce using rule 38 (MatchedStatement)


State 86

   39 MatchedStatement: Assignment SEMICOLON •

    $default  reduce using rule 39 (MatchedStatement)


State 87

   40 MatchedStatement: ParseArgs SEMICOLON •

    $default  reduce using rule 40 (MatchedStatement)


State 88

   16 ParamType: STRING LSQ RSQ •

    $default  reduce using rule 16 (ParamType)


State 89

   21 FormalParams: ParamType IDENTIFIER FormalParamsTail •
   22 FormalParamsTail: FormalParamsTail • COMMA ParamType IDENTIFIER

    COMMA  shift, and go to state 129

    $default  reduce using rule 21 (FormalParams)


State 90

   61 Assignment: IDENTIFIER ASSIGN ExprOrAssign •

    $default  reduce using rule 61 (Assignment)


State 91

   54 MethodInvocation: IDENTIFIER LPAR error • RPAR

    RPAR  shift, and go to state 130


State 92

   53 MethodInvocation: IDENTIFIER LPAR ExprListOpt • RPAR

    RPAR  shift, and go to state 131


State 93

   55 ExprListOpt: ExprList •
   58 ExprList: ExprList • COMMA Expr

    COMMA  shift, and go to state 132

    $default  reduce using rule 55 (ExprListOpt)


State 94

   57 ExprList: ExprOrAssign •

    $default  reduce using rule 57 (ExprList)


State 95

   87 Expr: IDENTIFIER DOTLENGTH •

    $default  reduce using rule 87 (Expr)


State 96

   84 Expr: LPAR error • RPAR

    RPAR  shift, and go to state 133


State 97

   83 Expr: LPAR ExprOrAssign • RPAR

    RPAR  shift, and go to state 134


State 98

   53 MethodInvocation: IDENTIFIER • LPAR ExprListOpt RPAR
   54                 | IDENTIFIER • LPAR error RPAR
   87 Expr: IDENTIFIER • DOTLENGTH
   88     | IDENTIFIER •

    DOTLENGTH  shift, and go to state 95
    LPAR       shift, and go to state 64

    $default  reduce using rule 88 (Expr)


State 99

   64 Expr: Expr • PLUS Expr
   65     | Expr • MINUS Expr
   66     | Expr • STAR Expr
   67     | Expr • DIV Expr
   68     | Expr • MOD Expr
   69     | Expr • AND Expr
   70     | Expr • OR Expr
   71     | Expr • XOR Expr
   72     | Expr • LSHIFT Expr
   73     | Expr • RSHIFT Expr
   74     | Expr • EQ Expr
   75     | Expr • GE Expr
   76     | Expr • GT Expr
   77     | Expr • LE Expr
   78     | Expr • LT Expr
   79     | Expr • NE Expr
   80     | MINUS Expr •

    $default  reduce using rule 80 (Expr)


State 100

   64 Expr: Expr • PLUS Expr
   65     | Expr • MINUS Expr
   66     | Expr • STAR Expr
   67     | Expr • DIV Expr
   68     | Expr • MOD Expr
   69     | Expr • AND Expr
   70     | Expr • OR Expr
   71     | Expr • XOR Expr
   72     | Expr • LSHIFT Expr
   73     | Expr • RSHIFT Expr
   74     | Expr • EQ Expr
   75     | Expr • GE Expr
   76     | Expr • GT Expr
   77     | Expr • LE Expr
   78     | Expr • LT Expr
   79     | Expr • NE Expr
   82     | NOT Expr •

    $default  reduce using rule 82 (Expr)


State 101

   64 Expr: Expr • PLUS Expr
   65     | Expr • MINUS Expr
   66     | Expr • STAR Expr
   67     | Expr • DIV Expr
   68     | Expr • MOD Expr
   69     | Expr • AND Expr
   70     | Expr • OR Expr
   71     | Expr • XOR Expr
   72     | Expr • LSHIFT Expr
   73     | Expr • RSHIFT Expr
   74     | Expr • EQ Expr
   75     | Expr • GE Expr
   76     | Expr • GT Expr
   77     | Expr • LE Expr
   78     | Expr • LT Expr
   79     | Expr • NE Expr
   81     | PLUS Expr •

    $default  reduce using rule 81 (Expr)


State 102

   37 MatchedStatement: RETURN ExprOpt SEMICOLON •

    $default  reduce using rule 37 (MatchedStatement)


State 103

   66 Expr: Expr STAR • Expr

    IDENTIFIER  shift, and go to state 98
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68
    PARSEINT    shift, and go to state 44
    LPAR        shift, and go to state 69
    MINUS       shift, and go to state 70
    NOT         shift, and go to state 71
    PLUS        shift, and go to state 72

    MethodInvocation  go to state 74
    ParseArgs         go to state 77
    Expr              go to state 135


State 104

   67 Expr: Expr DIV • Expr

    IDENTIFIER  shift, and go to state 98
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68
    PARSEINT    shift, and go to state 44
    LPAR        shift, and go to state 69
    MINUS       shift, and go to state 70
    NOT         shift, and go to state 71
    PLUS        shift, and go to state 72

    MethodInvocation  go to state 74
    ParseArgs         go to state 77
    Expr              go to state 136


State 105

   74 Expr: Expr EQ • Expr
